infrastructure/base/network/network-policies/authentik/allow-ingress-hister.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-hister
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/name: authentik
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: hister
          podSelector:
            matchLabels:
              app: hister
      ports:
        - protocol: TCP
          port: 9000
